fixed z-index max values

--- a/WebContent/pages/proxy-page.css
+++ b/WebContent/pages/proxy-page.css
@@ -4,10 +4,11 @@
 	right: 0px;
 	width: 605px;
 	height: 24px;
-	z-index: 9007199254740992;
+	z-index: 2147483647;
 	background-color: white;
 	border-width: 0px;
 	box-shadow: 2px 2px 2px #ccc;
+	-webkit-transition: width .5s ease-out;
 }
 
 .scrapbook-colorpicker {
@@ -16,7 +17,7 @@
 	left: 0px;
 	width: 150px;
 	height: 130px;
-	z-index: 9007199254740992;
+	z-index: 2147483647;
 	background-color: white;
 	border-color: gray;
 	border-width: 0px;
